<resources>
    <string name="app_name">individual2_Mod6</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="imagen">una imagen</string>
    <string name="name">Name</string>
    <string name="textview">TextView</string>
    <string name="textview2">TextView</string>
    <string name="name2">Name</string>
    <string name="name3">Name</string>
    <string name="textview3">TextView</string>
    <string name="guardar">Guardar</string>
    <string name="_0000">0000</string>
    <string name="chela">Chela</string>
    <string name="_000">0000</string>
    <string name="nombre_de_item">Nombre de Item</string>
    <string name="precio_unidad">Precio Unidad</string>
    <string name="cantidad">Cantidad</string>
    <string name="total_actual">TOTAL ACTUAL</string>
    <string name="_00000">00000</string>
    <string name="msje">Agregado Correctamente</string>
    <string name="precio">precio</string>
    <string name="nombre">nombre</string>
</resources>