<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintItem"
    android:layout_width="match_parent"
    android:layout_height="150dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewid"
        android:layout_width="280dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintCardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textviewItemNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/nombre"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/textViewItemCantidad"
                android:layout_width="100dp"
                android:layout_height="20dp"
                android:layout_marginTop="8dp"
                android:text="@string/cantidad"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textviewItemNombre"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/textViewPrecio"
                android:layout_width="130dp"
                android:layout_height="20dp"
                android:layout_marginTop="5dp"
                android:text="@string/precio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewItemCantidad"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/textviewTotal"
                android:layout_width="130dp"
                android:layout_height="30dp"
                android:layout_marginTop="16dp"
                android:text="@string/textview"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textviewItemNombre"
                app:layout_constraintVertical_bias="0.137"
                tools:ignore="TextSizeCheck" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>